--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="select_your_state">please选择你的国家：</string>
     <string name="select_your_planet">please选择你的星球：</string>
     <string name="rating">电影的评分星星：</string>
-    
+    <string name="Back">这是返回键，请注意了！</string>
+
 </resources>
